--- a/style.css
+++ b/style.css
@@ -1,7 +1,35 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  font-family: Arial, sans-serif;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f8f8f8;
+  padding: 10px 20px;
+}
+
+
+.nav ul {
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav ul li a {
+  text-decoration: none;
+  color: rgb(17, 14, 14);
+  font-size: 18px;
+}
+
+.hamburger {
+  display: none;
+  font-size: 24px;
+}
 
 
 img {
@@ -9,137 +37,196 @@ img {
   max-width: 100%;
 }
 
-/* header {
-     max-width: 80%;
-    max-width: 800px;
-    background-color: aquamarine;
-    min-height: 200px;
-    padding: 2em;
-    margin-inline: auto;
-}
-
-*/
-
 main {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
-  max-width: 2000px;
   margin: auto;
-
 }
 
-.card {
-  /* max-width: 100%; */
 
-  background-color: #FFECEA;
-  color: #000A64;
+
+.card {
+  background-color: #f3f3f3;
+  color: #0f0f12;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  grid-column: span 4;
-
-
+  grid-column: span 3;
 }
 
 .big-card {
-  grid-column: 1 / -1;
-  flex-direction: row;
-  gap: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f3f3f3;
+  padding: 5px;
+  margin-bottom: 20px;
+  flex-wrap: nowrap;
+
 }
 
-.card-image {
-  width: 100%;
+.big-card img.card-image {
+  width: 50%;
+  max-width: 93%;
+  height: auto;
+  margin-right: 20px;
 
+}
+
+.big-card .text-content {
+  width: 50%;
+  max-width: 93%;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+}
+
+
+.card-image {
+  width: 90%;
 }
 
 .text-content {
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-direction: column;
-
 }
+
+.title {
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
 
 h3 {
-  font-size: 32px;
+  font-size: 25px;
   margin-bottom: 0;
-
-
 }
 
-ul {
 
+ul {
   display: flex;
   list-style-type: none;
   gap: 8px;
   padding-left: 0;
 }
 
-li {
-  background-color: black;
-  color: white;
+.nav li {
+  width: 75px;
+  text-align: center;
+  border: solid black 2px;
+  color: rgb(7, 5, 5);
   padding: 4px;
+}
+
+.text-content li {
+  text-align: center;
+  border: solid black 2px;
+  color: rgb(7, 5, 5);
+  padding: 4px;
+}
+
+.card-image {
+  margin-bottom: 5px;
 
 }
 
-/* Desktop och upp från 667px */
-@media (min-width: 667px) {
-  main {
-    grid-template-columns: repeat(8, 1fr);
-  }
-}
-
-/* Desktop och upp från 923px */
 @media (min-width: 923px) {
-  main {
-    grid-template-columns: repeat(12, 1fr);
+  .big-card img.card-image {
+    width: 50%;
+    max-width: 47.5%;
+    height: auto;
+    margin-right: 20px;
+    margin-left: 11px;
+
+
   }
 }
 
-/* Desktop och upp från 1200px */
+
 @media (min-width: 1200px) {
   .card {
     grid-column: span 3;
   }
 }
 
-/* Surfplatta (768px till 922px) */
-@media (min-width: 768px) and (max-width: 922px) {
-  .big-card {
+@media (max-width: 667px) {
+  main {
+    grid-template-columns: 1fr;
+
+  }
+}
+
+
+@media (min-width: 922px) {
+  main {
+    grid-template-columns: repeat(12, 1fr);
+
+  }
+}
+
+
+@media (min-width: 668px) and (max-width: 922px) {
+  main {
+    grid-template-columns: repeat(6, 1fr);
+
+  }
+
+}
+
+
+@media (min-width: 668px) and (max-width: 922px) {
+  .card {
+    grid-column: span 3;
     flex-direction: column;
-    grid-column: 1 / -1;
+
+
   }
 
   .card-image {
     margin-bottom: 20px;
-    /* Avstånd mellan bilden och texten för surfplattor */
+
   }
 }
 
-/* Mobil och mindre än 667px */
+
 @media (max-width: 667px) {
-  .big-card {
-    flex-direction: column;
-    grid-column: 1 / -1;
+  nav {
+    display: block;
+    margin: 0 20px;
   }
-}
 
-/* Desktop och upp från 923px */
-@media (min-width: 923px) {
-  .big-card {
-    flex-direction: row;
-    grid-column: 1 / -1;
+
+  @media (max-width: 668px) {
+    .nav {
+      display: none;
+
+    }
+
+    .hamburger {
+      display: block;
+
+    }
+  }
+
+
+  @media (max-width: 922px) {
+    .big-card {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .big-card img.card-image,
+    .big-card .text-content {
+      width: 100%;
+      margin-right: 0;
+
+    }
+
 
   }
-}
-
-/* Surfplatta (768px till 922px) */
-@media (min-width: 768px) and (max-width: 922px) {
-  .big-card {
-    flex-direction: column;
-    grid-column: 1 / -1;
-    align-items: flex-start;
-    /* Vänsterställ innehållet i big-card */
-  }
-}
