--- a/style.css
+++ b/style.css
@@ -11,6 +11,17 @@ body {
   padding: 10px 20px;
 }
 
+a.button {
+  text-decoration: none;
+  color: inherit;
+
+}
+
+a.button:hover {
+  background-color: #000000;
+  color: white;
+
+}
 
 .nav ul {
   display: flex;
