added pictures to the last article and updated a href links

--- a/code/style.css
+++ b/code/style.css
@@ -139,8 +139,8 @@ article a {
   }
 }
 
-/* mobiles and tablets */
-@media (max-width: 768px) {
+/* Tablets and mobiles */
+@media (max-width: 900px) {
   main section:first-of-type {
     flex-direction: column;
   }
