updated some text

--- a/code/style.css
+++ b/code/style.css
@@ -62,12 +62,11 @@ nav ul li {
 }
 
 main section h2 {
-  font-size: 35px;
+  font-size: 30px;
   font-weight: bold;
   color: #0c0c0c;
-  margin: 8px 0;
   padding-top: 10px;
-  flex-wrap: wrap;
+  overflow: hidden;
 }
 
 /* Flexbox main news article */
