--- a/code/style.css
+++ b/code/style.css
@@ -35,7 +35,6 @@ p.category-title-small {
 }
 
 /* Layout */
-.header-content,
 .latest-news-content,
 .collage-news-content,
 .big-news-content,
@@ -61,8 +60,9 @@ header {
 }
 
 .logo img {
-  height: 70px;
-  width: auto;
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
 nav {
