--- a/code/style.css
+++ b/code/style.css
@@ -35,6 +35,7 @@ p.category-title-small {
 }
 
 /* Layout */
+.header-content,
 .latest-news-content,
 .collage-news-content,
 .big-news-content,
@@ -42,6 +43,10 @@ p.category-title-small {
   max-width: 1300px;
   margin: 0 auto;
   padding: 2rem 30px;
+}
+
+.header-content {
+  padding: 0px;
 }
 
 /* Header */
