--- a/code/style.css
+++ b/code/style.css
@@ -254,7 +254,7 @@ footer {
   .grid {
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 20px 200px;
   }
 
   .grid-item {
