--- a/code/style.css
+++ b/code/style.css
@@ -274,6 +274,7 @@ section.fourth {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: center;
   gap: 1.5rem;
   min-height: 300px;
 }
