Changed to <article> instead of <div>

--- a/code/style.css
+++ b/code/style.css
@@ -102,7 +102,7 @@ h2 {
   font-size: 1.75rem;
 }
 
-.card-item--large h3 {
+.article--large h3 {
   font-size: 1.75rem;
 }
 
@@ -119,7 +119,7 @@ h3 {
     font-size: 1.85rem;
   }
 
-  .card-item--large h3 {
+  .article--large h3 {
     font-size: 2rem;
   }
 }
@@ -134,7 +134,7 @@ h3 {
     font-size: 2.5rem;
   }
 
-  .card-item--large h3 {
+  .article--large h3 {
     font-size: 1.75rem;
   }
 }
@@ -453,53 +453,54 @@ a:not(.button):hover {
   Cards
 ******************** */
 
-.card-item__content {
+.article__content {
   padding-top: 1rem;
 }
 
-.card-item__content .button {
+.article__content .button {
   display: block;
+  width: -moz-fit-content;
   width: fit-content;
   margin-top: 1.25rem;
 }
 
-.card-item--large {
+.article--large {
   background-color: var(--light-blue);
   overflow: hidden;
 }
 
-.card-item--large .card-item__content {
+.article--large .article__content {
   padding: 1.25rem 1.5rem 1.5rem;
 }
 
-.card-item--large .card-item__content > *:first-child {
+.article--large .article__content > *:first-child {
   margin-top: 0;
 }
 
 @media (min-width: 800px) {
 
-  .card-item {
+  .article {
     grid-column: span 6;
   }
 
-  .card-item--large {
+  .article--large {
     grid-column: span 12;
     display: flex;
   }
 
-  .card-item--large > * {
+  .article--large > * {
     flex: 1;
   }
 
-  .card-item--large .card-item__content {
+  .article--large .article__content {
     padding: 1.75rem;
   }
 
-  .card-item--large .card-item__content > *:first-child {
+  .article--large .article__content > *:first-child {
     margin-top: 0;
   }
 
-  .card-item__image {
+  .article__image {
     position: relative;
   }
 
@@ -507,11 +508,11 @@ a:not(.button):hover {
 
 @media (min-width: 1025px) {
   
-  .card-item {
+  .article {
     grid-column: span 3;
   }
 
-  .card-item--large {
+  .article--large {
     grid-column: span 6;
   }
 
