--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,6 @@
-html {
+/*html {
   background-color: white
-}
+}*/
 
 * {
   font-family: Arial, Helvetica, sans-serif;
@@ -74,10 +74,11 @@ main section h2 {
 main section:first-of-type {
 
   display: flex;
-  background-color: white;
+  background-color: #f8fafa;
   margin: 15px 0;
   padding: 15px;
   padding-left: 15px;
+  border-radius: 10px/10px;
 }
 
 main section:first-of-type img {
@@ -105,12 +106,15 @@ button {
 /* Grid other news articles */
 main section:last-of-type {
   display: grid;
-  grid-template-columns: repeat(4, 1fr)
+  grid-template-columns: repeat(4, 1fr);
 }
 
 article {
-  background-color: white;
   padding: 20px;
+  background-color:  #7badb1;
+  border-radius: 10px 10px;
+  margin: 10px 10px 10px 10px;
+  color: white; 
 }
 
 article img {
