--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,3 @@
-/*html {
-  background-color: white
-}*/
-
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -55,7 +51,7 @@ nav ul li {
 
 .nav-list a {
 
-  color: white;
+  color: #0c0c0c;
   text-decoration: none;
   font-weight: bold;
 }
@@ -94,12 +90,16 @@ button {
   background-color: #7badb1;
   font-weight: bold;
   font-size: 18px;
-  color: white;
+  color: #0c0c0c;
   border: none;
   padding: 10px 20px;
   border-radius: 10px/10px;
   cursor: pointer;
   text-align: center;
+}
+
+.visually-hidden {
+  display: none; 
 }
 
 /* Grid other news articles */
@@ -113,7 +113,7 @@ article {
   background-color:  #7badb1;
   border-radius: 10px 10px;
   margin: 10px 10px 10px 10px;
-  color: white; 
+  color: #0c0c0c; 
 }
 
 article img {
