--- a/code/style.css
+++ b/code/style.css
@@ -65,8 +65,8 @@ html {
 }
 
 .img {
-  width: 100%;
-  height: auto;
+  width: 787px;
+  height: 787px;
   object-fit: cover;
   border-radius: 10px;
 }
