Updated css img again

--- a/code/style.css
+++ b/code/style.css
@@ -65,8 +65,9 @@ html {
 }
 
 .img {
-  width: 787px;
-  height: 787px;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
   object-fit: cover;
   border-radius: 10px;
 }
